<resources>
    <string name="app_name">Covid Traker</string>

    <string name="case_in_india">Cases In India</string>
    <string name="track_countries">Track India</string>
    <string name="total_cases">Total Cases</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Total Deaths</string>
    <string name="active">Active Cases</string>
    <string name="global_stats">global result</string>
    <string name="cases">Cases</string>
    <string name="critical">Critical</string>
    <string name="today_cases">Today Cases</string>
    <string name="today_recovered">Today Recovered</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="search">Search</string>
    <string name="country_name">Country Name</string>
    <string name="country">Country</string>
    <string name="stateDetails">StateDetails</string>
    <string name="stateName">State Name</string>
</resources>