<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StateListActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.leo.simplearcloader.SimpleArcLoader
                android:id="@+id/state_loader"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:visibility="visible"
                app:arc_speed="fast"
                app:arc_style="simple_arc"
                app:arc_thickness="3dp" />

            <ScrollView
                android:id="@+id/scrollIndia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/today_cases"
                            android:textColor="@android:color/background_dark"
                            android:textSize="18sp"
                            tools:ignore="RelativeOverlap" />

                        <TextView
                            android:id="@+id/tvTotalCases"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/active"
                            android:textColor="@android:color/background_dark"
                            android:textSize="18sp"
                            tools:ignore="RelativeOverlap" />

                        <TextView
                            android:id="@+id/tvActiveCases"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/today_cases"
                            android:textColor="@android:color/background_dark"
                            android:textSize="18sp"
                            tools:ignore="RelativeOverlap" />

                        <TextView
                            android:id="@+id/tvActiveCasesNew"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/recovered"
                            android:textColor="@android:color/background_dark"
                            android:textSize="18sp"
                            tools:ignore="RelativeOverlap" />

                        <TextView
                            android:id="@+id/tvRecover"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/today_recovered"
                            android:textColor="@android:color/background_dark"
                            android:textSize="18sp"
                            tools:ignore="RelativeOverlap" />

                        <TextView
                            android:id="@+id/tvRecoverNew"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/deaths"
                            android:textColor="@android:color/background_dark"
                            android:textSize="18sp"
                            tools:ignore="RelativeOverlap" />

                        <TextView
                            android:id="@+id/tvDeaths"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/today_deaths"
                            android:textColor="@android:color/background_dark"
                            android:textSize="18sp"
                            tools:ignore="RelativeOverlap" />

                        <TextView
                            android:id="@+id/tvDeathsNew"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/stateDetails"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stateListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />
</LinearLayout>